--- a/ios/DonaldSays/Base.lproj/LaunchScreen.xib
+++ b/ios/DonaldSays/Base.lproj/LaunchScreen.xib
@@ -4,6 +4,11 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="Avenir.ttc">
+            <string>Avenir-Book</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -11,26 +16,29 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Uuo-rD-wvi">
-                    <rect key="frame" x="120" y="86" width="240" height="284"/>
-                    <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo180" translatesAutoresizingMaskIntoConstraints="NO" id="BDE-No-9bL">
-                            <rect key="frame" x="30" y="-3" width="180" height="176"/>
-                        </imageView>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="DonaldSays" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
-                            <rect key="frame" x="-100" y="166" width="441" height="43"/>
-                            <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="36"/>
-                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                </view>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo180.png" translatesAutoresizingMaskIntoConstraints="NO" id="KKR-jJ-Nna">
+                    <rect key="frame" x="0.0" y="223" width="480" height="128"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="128" id="V8u-wW-2eW"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DonaldSays" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XTH-F2-KfI">
+                    <rect key="frame" x="0.0" y="150" width="481" height="59"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="59" id="LMe-xL-bEd"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="40"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="Uuo-rD-wvi" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Zi0-ft-5L9"/>
-                <constraint firstItem="Uuo-rD-wvi" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="i4E-yd-QzV"/>
+                <constraint firstItem="XTH-F2-KfI" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="2Zb-03-Ov6"/>
+                <constraint firstItem="XTH-F2-KfI" firstAttribute="centerX" secondItem="KKR-jJ-Nna" secondAttribute="centerX" id="HOK-04-d5j"/>
+                <constraint firstItem="XTH-F2-KfI" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="150" id="KOW-UC-6tk"/>
+                <constraint firstItem="KKR-jJ-Nna" firstAttribute="top" secondItem="XTH-F2-KfI" secondAttribute="bottom" constant="14" id="TW3-En-BVg"/>
+                <constraint firstAttribute="trailing" secondItem="KKR-jJ-Nna" secondAttribute="trailing" id="aIA-uj-gr2"/>
+                <constraint firstItem="XTH-F2-KfI" firstAttribute="leading" secondItem="KKR-jJ-Nna" secondAttribute="leading" id="oYh-5l-adk"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -38,6 +46,6 @@
         </view>
     </objects>
     <resources>
-        <image name="logo180" width="180" height="180"/>
+        <image name="logo180.png" width="180" height="180"/>
     </resources>
 </document>
